Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
 
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
 
+<h3>
+<a id="welcome-to-httpwwwbanghuiorg" class="anchor" href="#welcome-to-httpwwwbanghuiorg" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to <a href="http://www.banghui.org">http://www.banghui.org</a>.</h3>
+
 <pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
 $ git checkout gh-pages
@@ -58,6 +61,9 @@ $ git checkout gh-pages
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
 <p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+
+<h3>
+<a id="welcome-to-httpwwwaijavacn" class="anchor" href="#welcome-to-httpwwwaijavacn" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to <a href="http://www.aijava.cn">http://www.aijava.cn</a>.</h3>
       </section>
     </div>
 
